--- a/SimulacionMonteCarloSemillas.ipynb
+++ b/SimulacionMonteCarloSemillas.ipynb
@@ -17,7 +17,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Zalles Merino Izai Alejandro"
+        "# <center>Escuela Militar de Ingeniería</center>\n",
+        "<center>Ingeniería de Sistemas</center>\n",
+        "<center><img src=\"https://i.servimg.com/u/f73/20/03/60/99/logo_i12.jpg\" width=\"300\"></center>\n",
+        "<center>Estudiante: Zalles Merino Izai Alejandro</center>\n",
+        "<center>Código SAGA: A27006-7</center>\n",
+        "\n",
+        "## <center>Docente: Ing. Angela Santos</center>\n",
+        "## Fecha: 11 de Abril de 2025"
       ],
       "metadata": {
         "id": "sfyJuLFmpU0i"
@@ -25,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "C9JDJEp6lOcm"
       },
@@ -58,7 +65,7 @@
       "metadata": {
         "id": "AFOcBFYkoCm0"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,7 +93,7 @@
         "id": "YnX-KQsdoJHn",
         "outputId": "be5ec9b3-313b-4559-94eb-644b54d9e38e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +130,7 @@
       "metadata": {
         "id": "Oo5PHPl8oNHp"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +151,7 @@
       "metadata": {
         "id": "E7Y_lG63oPV4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -173,7 +180,7 @@
         "id": "qsdqSjzloRvl",
         "outputId": "1c1cddfc-bb61-487d-cbf6-e86562f6a41e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,7 +338,7 @@
         "id": "75Ixf5PToT8w",
         "outputId": "a1db71b9-08ec-4d5a-d662-5facb836fda0"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
