--- a/SimulacionMonteCarloSemillas.ipynb
+++ b/SimulacionMonteCarloSemillas.ipynb
@@ -38,7 +38,7 @@
       },
       "outputs": [],
       "source": [
-        "# Instalar paquetes necesarios si no están\n",
+        "# Instalar paquetes necesarios\n",
         "if (!require(\"knitr\")) install.packages(\"knitr\", quiet = TRUE)\n",
         "library(knitr)"
       ]
